--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docenv": "^2.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.12.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
