--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "docenv": "^2.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "pg": "^8.13.1"
   },
   "devDependencies": {
