--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.1"
   },
   "devDependencies": {
