--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
